# AutoReg

./: .gitignore  README.md
Code/Review/: itkAdaptativeBiningThresholdImageCalculator.h  itkAdaptativeBiningThresholdImageCalculator.txx  itkGIBUB3DTransform.h  itkGIBUB3DTransform.txx  itkHistogram.h  itkHistogram.txx  itkHistogramImageToImageMetric.h  itkHistogramImageToImageMetric.txx  itkMutualInformationHistogramImageToImageMetric.h  itkMutualInformationHistogramImageToImageMetric.txx  itkQuantileThresholdImageCalculator.h  itkQuantileThresholdImageCalculator.txx  itkRobbinsMonroOptimizer.h  itkSampleToAnisotropicHistogramFilter.h  itkSampleToAnisotropicHistogramFilter.txx  itkScalarImageToAnisotropicHistogramGenerator.h  itkScalarImageToAnisotropicHistogramGenerator.txx
Code/include/: MIRegistration.h  MetricHelper.h  OptimizerHelper.h  PreprocessingHelper.h  TransformHelper.h  fcmax2.h
Code/scripts/: ants_reg.sh  autoreg_test_samples  autoreg_test_smoothing  autoreg_testall  compensation_phallusya.sh  copy_all_tests  launch_masks  launch_masks_testing  launch_real_registrations  launch_rire_registration  launch_testing_registrations  launch_testing_registrations_2  launch_vph_registration  plot-script.gnp  test_summary  test_total_errors
Code/src/: CMakeLists.txt  OptimizerHelper.cxx  autoreg.cxx  autoreg.h  cumulativeTransform.cxx  fcmax2.cxx  itkGIBUBSubtractionFilter.h  itkRobbinsMonroOptimizer.cxx  itkSISCOMSubtractionFilter.h  itkSISCOMSubtractionFilter.txx  maskSpect.cxx  metric-map.cxx  rire_reg.cxx  simple-metric-map.cxx  simpleTransformImage.cxx  transform-points.cxx  transformTests.cxx  vphSISCOMTest.cxx  vphTransformImages.cxx  vph_reg.cxx
Code/test/: 01_transforms.tfm  FactorNormalizacion_FBP075.txt  ictals.tfm  interictals.tfm
Code/txx/: MIRegistration.txx  MetricHelper.txx  OptimizerHelper.txx  PreprocessingHelper.txx  TransformHelper.txx
